--- a/fataway/pubspec.yaml
+++ b/fataway/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  sticky_and_expandable_list: ^0.2.3
 
 
   # The following adds the Cupertino Icons font to your application.
