--- a/fataway/pubspec.yaml
+++ b/fataway/pubspec.yaml
@@ -24,6 +24,11 @@ dependencies:
   flutter:
     sdk: flutter
   sticky_and_expandable_list: ^0.2.3
+  google_fonts: ^1.1.2
+  font_awesome_flutter: 8.11.0
+  percent_indicator: ^2.1.9+1
+  introduction_screen: ^1.0.9
+  http: ^0.12.2
 
 
   # The following adds the Cupertino Icons font to your application.
