--- a/fataway/pubspec.yaml
+++ b/fataway/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   percent_indicator: ^2.1.9+1
   introduction_screen: ^1.0.9
   http: ^0.12.2
+  flutter_launcher_icons: ^0.8.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -42,6 +43,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: assets/icons/app_icon.png
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
