--- a/fataway/pubspec.yaml
+++ b/fataway/pubspec.yaml
@@ -24,7 +24,6 @@ dependencies:
   settings_ui: ^0.6.0
   flutter:
     sdk: flutter
-  shared_preferences: ^2.0.3
   sticky_and_expandable_list: ^0.2.3
   google_fonts: ^1.1.2
   font_awesome_flutter: 8.11.0
@@ -32,8 +31,8 @@ dependencies:
   introduction_screen: ^1.0.9
   http: ^0.12.2
   flutter_launcher_icons: ^0.8.1
-  #hive: ^2.0.0
-  #hive_flutter: ^1.0.0
+  hive: ^2.0.0
+  hive_flutter: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -46,8 +45,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  #hive_generator: ^1.0.0
-  #build_runner: ^1.11.5
+  hive_generator: ^1.0.0
+  build_runner: ^1.11.5
 
 flutter_icons:
   android: true
