--- a/fataway/pubspec.yaml
+++ b/fataway/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   introduction_screen: ^1.0.9
   http: ^0.13.0
   flutter_launcher_icons: ^0.9.0
-  hive: ^2.0.0
-  hive_flutter: ^1.0.0
+  material_floating_search_bar: ^0.2.6
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
