--- a/fataway/pubspec.yaml
+++ b/fataway/pubspec.yaml
@@ -31,7 +31,7 @@ dependencies:
   introduction_screen: ^1.0.9
   http: ^0.13.0
   flutter_launcher_icons: ^0.9.0
-
+  shared_preferences: ^2.0.3
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
