--- a/fataway/pubspec.yaml
+++ b/fataway/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 0.0.1+1
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -33,6 +33,7 @@ dependencies:
   flutter_launcher_icons: ^0.9.0
   shared_preferences: ^2.0.3
   material_floating_search_bar: ^0.2.6
+  package_info: ^2.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
